--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!doctype html>
 <html lang="fr">
-	<head>
-		<meta charset="UTF-8">
-		<!--<link rel="stylesheet" type="text/css" href="mystyle.css">-->
-		<title>ABAHT</title>
-	</head>
-	<body>
-        <!--<script src="https://ondras.github.io/rot.js/rot.min.js"></script>-->
-		<script src="assets/rot.min.js"></script>
-		<script src="assets/game.js"></script>
-		<script src="assets/player.js"></script> 
-        <script src="assets/glyph.js"></script>
-		<script src="assets/tile.js"></script>
-		<script src="assets/map.js"></script>
-		<script src="assets/utils.js"></script>
-		<script src="assets/tilemap.js"></script>
-		<script src="assets/props.js"></script>
-		<script src="assets/recipes.js"></script>
-		<script src="assets/propsMap.js"></script>
-		
-		<div id="up" style="border:0px solid red;clear: both;" > </div>
-        <div id="main" style="border:0px solid blue;float:left;" > </div>
-        <div id="side" style="border:0px solid black;float:left;"> 
-            <div id="map" style="border:0px solid green;clear: both;"> </div>
-            <div id="inventory" style="border:0px solid red;clear: both;"> 
-                <center><b><u>Recipe</u></b></center>
-            </div>
+
+<head>
+    <meta charset="UTF-8">
+
+<meta name="viewport" content="user-scalable=no,width=700">
+
+    <!--<link rel="stylesheet" type="text/css" href="mystyle.css">-->
+    <title>ABAHT</title>
+</head>
+
+<body>
+    <!--<script src="https://ondras.github.io/rot.js/rot.min.js"></script>-->
+    <script src="assets/rot.js"></script>
+    <script src="assets/game.js"></script>
+    <script src="assets/player.js"></script>
+    <script src="assets/glyph.js"></script>
+    <script src="assets/tile.js"></script>
+    <script src="assets/map.js"></script>
+    <script src="assets/utils.js"></script>
+    <script src="assets/tilemap.js"></script>
+    <script src="assets/props.js"></script>
+    <script src="assets/recipes.js"></script>
+    <script src="assets/propsMap.js"></script>
+    
+    <button onclick="Game.showHelp()" style="font-size: 30px;border:0px solid blue;float:left;">?</button>
+    <div id="up" style="border:0px solid red;clear: both;">  </div>
+    <div id="main" style="border:0px solid blue;float:left;"> </div>
+    <div id="side" style="border:0px solid black;float:left;">
+        <div id="map" style="border:0px solid green;clear: both;"> </div>
+        <div id="inventory" style="border:0px solid red;clear: both;">
+            <!-- <center><b><u>Recipe</u></b></center> -->
         </div>
-        <div id="down" style="border:0px solid yellow;clear: both;"> </div>
-        ←↑→↓ key to move (Or click anywhere : Yeah pathfinding !) <br>
-        < > (or mouse wheel) to zoom in/out (Display in ASCII mode)
-	</body>
+    </div>
+    <div id="down" style="border:0px solid yellow;clear: both;"> </div>
+    <!-- ←↑→↓ key to move (Or click anywhere : Yeah pathfinding !) <br> -->
+    <!-- < > (or mouse wheel) to zoom in/out (Display in ASCII mode) -->
+</body>
+
 </html>
